--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,10 @@
-html {
-    background: #272727;
-}
+html { 
+	background: url(../background.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+  }
 body {
 	margin: 0;
 }
