--- a/style/main.css
+++ b/style/main.css
@@ -17,6 +17,7 @@ body {
 	width: 90%;
 	height: 80vh;
 	transform: rotateY(180deg);
+	/*clip-path: ellipse(60px 40px at 75px 30px);*/
 }
 #logo {
 	width: 25%;
